# mlx_shim

./: CMakeLists.txt
include/: mlx.h
src/: lib.c  lib.h
